refactor and modify kubernetes resources

--- a/kubernetes/sa-webapp/sa-webapp-deployment.yaml
+++ b/kubernetes/sa-webapp/sa-webapp-deployment.yaml
@@ -1,29 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sa-frontend
+  name: sa-webapp
   labels:
-    app: sa-frontend 
+    app: sa-webapp
 spec:
   selector:
     matchLabels:
-      app:  sa-frontend
-    
+      app: sa-webapp
   replicas: 2
   minReadySeconds: 15
   strategy:
     type: RollingUpdate
-    rollingUpdate: 
+    rollingUpdate:
       maxUnavailable: 1
       maxSurge: 1
   template:
     metadata:
       labels:
-        app: sa-frontend
+        app: sa-webapp
     spec:
       containers:
-        - image: rinormaloku/sentiment-analysis-frontend:green
+        - image: 1uka/sa-webapp
           imagePullPolicy: Always
-          name: sa-frontend
+          name: sa-webapp
+          env:
+            - name: SA_LOGIC_API_URL
+              value: "http://sa-logic"
           ports:
-            - containerPort: 80
+            - containerPort: 8080
