add mysql to webapp

--- a/kubernetes/app/sa-logic/sa-logic-deployment.yaml
+++ b/kubernetes/app/sa-logic/sa-logic-deployment.yaml
@@ -25,5 +25,9 @@ spec:
         - image: 1uka/sa-logic:v2
           imagePullPolicy: Always
           name: sa-logic
+          resources:
+            limits:
+              memory: "64Mi"
+              cpu: "250m"
           ports:
             - containerPort: 5000
