--- a/kubernetes/app/sa-frontend/sa-frontend-deployment.yaml
+++ b/kubernetes/app/sa-frontend/sa-frontend-deployment.yaml
@@ -27,3 +27,7 @@ spec:
           name: sa-frontend
           ports:
             - containerPort: 80
+          resources:
+            limits:
+              memory: "64Mi"
+              cpu: "250m"
