--- a/kubernetes/app/sa-webapp/sa-webapp-deployment.yaml
+++ b/kubernetes/app/sa-webapp/sa-webapp-deployment.yaml
@@ -8,13 +8,6 @@ spec:
   selector:
     matchLabels:
       app: sa-webapp
-  replicas: 2
-  minReadySeconds: 15
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
   template:
     metadata:
       labels:
@@ -22,11 +15,19 @@ spec:
         tier: backend
     spec:
       containers:
-        - image: 1uka/sa-webapp
+        - name: sa-webapp
+          image: 1uka/sa-webapp:stateful
           imagePullPolicy: Always
-          name: sa-webapp
           env:
             - name: SA_LOGIC_API_URL
               value: "http://sa-logic"
+            - name: MYSQL_HOST
+              value: sa-webapp-mysql
+            - name: MYSQL_DATABASE
+              value: "sa_webapp"
+            - name: MYSQL_USER
+              value: "sa_user"
+            - name: MYSQL_PASSWORD
+              value: "sa_password"
           ports:
             - containerPort: 8080
