--- a/kubernetes/app/sa-webapp/sa-webapp-deployment.yaml
+++ b/kubernetes/app/sa-webapp/sa-webapp-deployment.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+  labels:
+    app: sa-webapp
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -22,7 +35,7 @@ spec:
             - name: SA_LOGIC_API_URL
               value: "http://sa-logic"
             - name: MYSQL_HOST
-              value: sa-webapp-mysql
+              value: localhost
             - name: MYSQL_DATABASE
               value: "sa_webapp"
             - name: MYSQL_USER
@@ -31,3 +44,26 @@ spec:
               value: "sa_password"
           ports:
             - containerPort: 8080
+
+        - name: mysql
+          image: mysql:5.6
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: "toor"
+            - name: MYSQL_DATABASE
+              value: "sa_webapp"
+            - name: MYSQL_USER
+              value: "sa_user"
+            - name: MYSQL_PASSWORD
+              value: "sa_password"
+          ports:
+            - containerPort: 3306
+              name: mysql
+          volumeMounts:
+            - name: mysql-persistent-storage
+              mountPath: /var/lib/mysql
+
+      volumes:
+        - name: mysql-persistent-storage
+          persistentVolumeClaim:
+            claimName: mysql-pv-claim
