--- a/kubernetes/app/sa-logic/sa-logic-deployment.yaml
+++ b/kubernetes/app/sa-logic/sa-logic-deployment.yaml
@@ -22,7 +22,7 @@ spec:
         tier: backend
     spec:
       containers:
-        - image: 1uka/sa-logic:v2
+        - image: 1uka/sa-logic
           imagePullPolicy: Always
           name: sa-logic
           resources:
